[project]
name = "clippertv"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "camelot-py>=1.0.0",
    "pydantic[email]>=2.6.0",
    "requests>=2.32.0",
    "libsql>=0.1.11",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "plotly>=6.3.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.50.0",
]

[project.scripts]
clippertv = "clippertv.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["clippertv"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
