[project]
name = "clippertv"
version = "0.2.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bs4>=0.0.2",
    "pydantic[email]>=2.6.0",
    "requests>=2.32.0",
    "libsql>=0.1.11",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
clippertv-web = "clippertv.web.main:run"
clipper-download = "clippertv.ingest.clipper:main"
clippertv-ingest = "clippertv.scheduler.service:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/ingest/test_clipper.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "prepush: fast tests that run before every commit",
    "integration: tests that hit real APIs (skip in prepush)",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src/**/*.py"]
